--- a/Microtask-2/MTask2.ipynb
+++ b/Microtask-2/MTask2.ipynb
@@ -26,7 +26,7 @@
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch_dsl import Search\n",
     "\n",
-    "from subprocess import call\n",
+    "import subprocess\n",
     "\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
